# sqlite-native-runtime

./: .dockerignore  .gitattributes  .gitignore  CHANGE.md  Justfile  LICENSE  Makefile  PLAN.md  README.md  RELEASE.md  VERSIONS
.github/workflows/: build-java-ffm.yml  build-java-jni.yml  build-java21.yml  build-java25-native.yml  build-rust.yml  ci.yml  publish.yml  release.yml  verify-release.yml
agents/: ARCHITECTURE.md
agents/specs/TT-1/: SPEC.md
agents/specs/TT-2/: SPEC.md
agents/specs/TT-3/: SPEC.md
agents/specs/TT-4/: SPEC.md
containers/: Dockerfile.java-test  Dockerfile.rust-test
containers/test-release/: Dockerfile
containers/test-release/src/: Main.java  MainFfm.java  MainJni.java
docs/: INSTALL.md  PLAN_WORKER.md  TEST.md  USAGE.md  WORKER_IDEA.md
docs/testing/: strategy.md
java/: pom.xml
java/src/main/java/mx/rafex/sqlite/: SqliteConnection.java  SqliteLibrary.java  SqliteStatement.java
java/src/test/java/mx/rafex/sqlite/: SmokeTest.java
rust/src/: connection.rs  error.rs  handle.rs  statement.rs  stmt.rs  transaction.rs  util.rs  wal.rs
scripts/: README.md
scripts/commons/: commons.just  commons.mk  env.sh
scripts/container/: container-test.sh  container.just  container.mk
scripts/release/: install.sh  release-dispatch.sh  release.just  release.sh  rust-publish.sh  tag-create.py  tag-push.sh
scripts/test/: coverage-java.sh  coverage-rust.sh  test-ffi.sh  test-integration.sh  test-release.sh  test-rust.sh  test-unit.sh  test.just  test.mk
sources/java/ether-sqlite-core/: pom.xml
sources/java/ether-sqlite-ffm-java21-runtime/: pom.xml
sources/java/ether-sqlite-ffm-runtime/: pom.xml
sources/java/ether-sqlite-jni-java21-runtime/: pom.xml
sources/java/ether-sqlite-jni-runtime/: pom.xml
sources/java/ether-sqlite-runtime/src/main/java/mx/rafex/sqlite/: SqliteConnection.java
sources/rust/: Cargo.toml
sources/rust/ether-sqlite-core/: Cargo.toml
sources/rust/ether-sqlite-core/src/: connection.rs  error.rs  lib.rs  statement.rs  transaction.rs  wal.rs
sources/rust/ether-sqlite-core/tests/: ffi_contract.rs
sources/rust/ether-sqlite-ffm/: Cargo.toml
sources/rust/ether-sqlite-ffm/src/: lib.rs
sources/rust/ether-sqlite-jni/: Cargo.toml
sources/rust/ether-sqlite-jni/src/: lib.rs
sources/rust/ether-sqlite/src/: connection.rs  stmt.rs
sources/rust/ether-sqlite/tests/: ffi_contract.rs
sources/rust/ether-worker/: Cargo.toml
sources/rust/ether-worker/src/: config.rs  db.rs  inserter.rs  main.rs  metrics.rs  schema.rs  topic.rs
sources/spike/: README.md
sources/spike/bench/: publisher.py  run-benchmark.sh
sources/spike/bench/results/: report-20260526-184317.md  report-20260526-190014.md
sources/spike/worker-java/: pom.xml
sources/spike/worker-rust/: Cargo.toml
sources/spike/worker-rust/src/: config.rs  inserter.rs  main.rs
sqlite-native-runtime/: README.md
sqlite-native-runtime/java/: pom.xml
sqlite-native-runtime/java/ether-sqlite/: pom.xml
sqlite-native-runtime/java/ether-sqlite-java21/: pom.xml
sqlite-native-runtime/java/ether-sqlite-runtime/: .gitignore
sqlite-native-runtime/java/ether-sqlite-runtime/src/test/java/mx/rafex/sqlite/: SmokeTest.java  SqliteConnectionTest.java  (+1 more)
sqlite-native-runtime/java/src/main/java/mx/rafex/sqlite/: SqliteConnection.java  SqliteLibrary.java  SqliteStatement.java
sqlite-native-runtime/java/src/main/java21/mx/rafex/sqlite/: SqliteLibrary.java
sqlite-native-runtime/rust/: Cargo.toml
sqlite-native-runtime/rust/ether-sqlite/src/: error.rs
sqlite-native-runtime/rust/src/: connection.rs  handle.rs  lib.rs  statement.rs  transaction.rs  util.rs  wal.rs
sqlite-native-runtime/rust/tests/: ffi_contract.rs
(+46 files in other folders)
