[package]
name    = "ether-sqlite"
version = "0.1.0"
edition = "2021"
description = "SQLite C ABI para Java/GraalVM vía Panama FFI"

[lib]
name       = "ether_sqlite_runtime"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
libsqlite3-sys = { version = "0.30", features = ["bundled"] }

[profile.release]
panic         = "abort"
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true

[profile.dev]
panic = "abort"
