[package]
name        = "snr-mqtt-worker-spike"
version     = "0.1.0"
edition     = "2021"
description = "Spike C — worker MQTT → SQLite en Rust (rumqttc + rusqlite bundled)"

# Standalone: NO forma parte del workspace sources/rust/.
# Mantiene el workspace limpio (solo librerías de sistema).
[workspace]

[[bin]]
name = "snr-mqtt-worker"
path = "src/main.rs"

[dependencies]
# MQTT client async — tokio-native, sin dependencias C
rumqttc = "0.24"

# SQLite con SQLite bundled (misma amalgamation que ether-sqlite-core)
# Binario único — sin .so externa, sin dependencias en runtime
rusqlite = { version = "0.32", features = ["bundled"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# JSON para el payload
serde_json = "1"

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true
panic         = "abort"
